feat(it): add the config and implement of multiEnv